--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ jUmfN8bJ9aQ=
 =VrBm
 -----END PGP PUBLIC KEY BLOCK-----
                     </pre>
-                <h class="bold" style="color: white;">Q&A</h>
+                <h class="bold" style="color: white; display: none;">Q&A</h>
 
                 </p>
 
