--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <br>
                     <br>
                 <div id="social" class="truncate-text">
+                    <a>Discord | senshi_.official</a><br>
                     <a href="https://github.com/senshiofficial">Github | senshiofficial</a><br>
                     <a href="mailto:senshi_official@proton.me">Email | senshi_official@proton.me (only PGP encrypted messages)</a>
                 </div>
